添加方向选择按钮

--- a/index.html
+++ b/index.html
@@ -29,8 +29,19 @@
                 <button id="try-again">再来一次</button>
             </div>
         </div>
+        
+        <!-- 添加方向按钮区域 -->
+        <div class="direction-buttons">
+            <button id="btn-up">↑</button>
+            <div class="horizontal-buttons">
+                <button id="btn-left">←</button>
+                <button id="btn-right">→</button>
+            </div>
+            <button id="btn-down">↓</button>
+        </div>
+        
         <div class="instruction">
-            <p>使用 <strong>方向键</strong> 或 <strong>WASD</strong> 移动方块，相同数字的方块会合并。</p>
+            <p>使用 <strong>方向键</strong>、<strong>WASD</strong> 或 <strong>屏幕按钮</strong> 移动方块，相同数字的方块会合并。</p>
         </div>
     </div>
     <script src="script.js"></script>
